<resources>
    <string name="app_name">Tennis Counter</string>
    <string name="heading">Tennis Scorekeeper</string>
    <string name="player1">First player</string>
    <string name="player2">Second player</string>
    <string name="submit">Submit</string>
    <string name="set">Set</string>
    <string name="game">Game</string>
    <string name="points">Points</string>
    <string name="zero">0</string>
</resources>
