<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        style="@style/mainLinear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/heading"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:adjustViewBounds="true"
            android:src="@drawable/main"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player1" />

        <EditText
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submit"/>

    </LinearLayout>
</ScrollView>
