<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        style="@style/mainLinear">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/name"
                android:id="@+id/firstPlayer"
                android:text="@string/player1" />

            <TextView
                style="@style/name"
                android:id="@+id/secondPlayer"
                android:text="@string/player2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/head"
                android:text="@string/set"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setA"
                    style="@style/numbers"
                    android:text="@string/zero"
                     />

                <TextView
                    android:id="@+id/setB"
                    style="@style/numbers"
                    android:text="@string/zero"
                     />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/head"
                android:text="@string/game"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gameA"
                    style="@style/numbers"
                    android:text="@string/zero"
                    />

                <TextView
                    android:id="@+id/gameB"
                    style="@style/numbers"
                    android:text="@string/zero"
                     />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/head"
                android:text="@string/points"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pointA"
                    style="@style/numbers"
                    android:text="@string/zero"
                     />

                <TextView
                    android:id="@+id/pointB"
                    style="@style/numbers"
                    android:text="@string/zero" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increasePointA"
                android:src="@drawable/ic_add_black_24dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increasePointB"
                android:src="@drawable/ic_add_black_24dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/report"
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">
            <Button
                android:text="Restart"
                android:onClick="resetAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>